# QEC-decoder

./: .gitattributes  .gitignore  Cargo.toml  README.md  decoder.py  monte_carlo_utils.py  pyproject.toml  rotated_surface_code.py  test.ipynb  utils.py
experiments/: compare_bp_versus_dmembp.ipynb  compare_decoding_with_x&z_versus_z_detectors.ipynb  compare_py_and_rust.ipynb  find_decoding_threshold_circlevel_noise.ipynb  test_phenom_noise_decoding_under_circlevel_noise.ipynb  tune_bp_scaling_factor.ipynb  tune_membp_circlevel_noise.ipynb  utils.py  visualize_bp.ipynb
figs/: readme.md
interface_to_scala/: chkmat.npy  notebook.ipynb  prior.npy  readme.md
notebooks/: sinter_compare_bp_versus_mwpm.ipynb  sliding_window.ipynb  tune_bp_scaling_factor.ipynb  tune_dmembp_scaling_factor.ipynb  visualize_bp.ipynb
python/qecdec/: __init__.py  decoder_py.py  decoders.py  dem_to_matrices.py  experiments.py  sinter_decoders.py  sinter_wrapper.py  sliding_window_decoders.py  utils.py
pytorch/: benchmark.ipynb  learned_decoders.py  train_dmembp.ipynb  train_dmemoffnormbp.ipynb  train_utils.py
pytorch/data/rotated_surface_code_memory_Z/d=11_rounds=11_p=0.01/: dataset_builder.py  train_dataset.pt  val_dataset.pt
pytorch/data/rotated_surface_code_memory_Z/d=5_rounds=5_p=0.01/: dataset_builder.py  train_dataset.pt  val_dataset.pt
pytorch/learned_params/: dmembp_2025-09-21-20-21-45_gamma.npy  dmembp_d5_2025-09-29-13-23-36_gamma.npy  dmemoffnormbp_2025-09-23-18-07-24_gamma.npy  dmemoffnormbp_2025-09-23-18-07-24_nf.pkl
src/: lib.rs
(+3 files in other folders)
